--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -16,8 +16,10 @@
     </div>
         
     <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <strong>Nome:</strong> {{db.first_name}}<br>
-        <strong>Ultimo nome:</strong> {{db.last_name}}<br>
+        <strong>CNPJ:</strong> {{db.cnpj}}<br>
+        <strong>Nome real:</strong> {{db.nome_real}}<br>
+        <strong>Nome fantasia:</strong> {{db.nome_fantasia}}<br>
+        <strong>Telefone:</strong> {{db.telefone}}<br>
     </div>
 </body>
 </html>
