--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -19,8 +19,10 @@
         <div id="result"></div>
         <form name="form" id="form" action="{% if db %}/update/{{db.id}}/{%else%}/create/{% endif %}" method="POST">
             {% csrf_token %}
-            <div class="form-group mt-4">Nome: {{form.first_name}}</div>
-            <div class="form-group mt-4">Ultimo nome: {{form.last_name}}</div>
+            <div class="form-group mt-4">CNPJ: {{form.cnpj}}</div>
+            <div class="form-group mt-4">Nome real: {{form.nome_real}}</div>
+            <div class="form-group mt-4">Nome fantasia: {{form.nome_fantasia}}</div>
+            <div class="form-group mt-4">Telefone: {{form.telefone}}</div>
             <input style="margin-top: 10px;" type="submit" class="btn btn-success" value="Enviar">
         </form>
     </div>
