--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -22,7 +22,7 @@
             <div class="form-group mt-4">CNPJ: {{form.cnpj}}</div>
             <div class="form-group mt-4">Nome real: {{form.nome_real}}</div>
             <div class="form-group mt-4">Nome fantasia: {{form.nome_fantasia}}</div>
-            <div class="form-group mt-4">Telefone: {{form.telefone}}</div>
+            <!--<div class="form-group mt-4">Telefone: {{form.telefone}}</div>-->
             <input style="margin-top: 10px;" type="submit" class="btn btn-success" value="Enviar">
         </form>
     </div>
