--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
               </tr>
             </thead>
             <tbody>
-            Organizadora de evento
+            Organizadora
             {% for dbs in db %}
               <tr>
                 <th>{{dbs.cnpj}}</th>
