--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -19,7 +19,7 @@
         <strong>CNPJ:</strong> {{db.cnpj}}<br>
         <strong>Nome real:</strong> {{db.nome_real}}<br>
         <strong>Nome fantasia:</strong> {{db.nome_fantasia}}<br>
-        <!--<strong>Telefone:</strong> {{db.telefone}}<br>-->
+        <strong>Telefone:</strong> {{db.telefone}}<br>
     </div>
 </body>
 </html>
